crates/deadline-cli/tests/cli/snapshots/cli__job__job_get_search_term_multiple_matches_shows_summary.snap
---
source: crates/deadline-cli/tests/cli/job.rs
info:
  program: deadline
  args:
    - job
    - get
    - render
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61358"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61358"
    AWS_ENDPOINT_URL_STS: "http://localhost:61358"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpS2cE0K/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpS2cE0K
---
success: true
exit_code: 0
----- stdout -----
Found 2 job(s) matching "render", showing most recent 2:

  Render Job 1
    job-aaf4cdf8aae242f58fb84c5bb19f199b  SUCCEEDED     [LOCAL_TIMESTAMP]
    Tasks: 10 succeeded

  Render Job 2
    job-0d239749fa05435f90263b3a8be54144  RUNNING       [LOCAL_TIMESTAMP]
    Tasks: 5 running, 3 pending


To get details, run: deadline job get --job-id <job-id>

----- stderr -----
