crates/deadline-cli/tests/cli/snapshots/cli__job__job_list_api_failure_prints_error_with_suggestions.snap
---
source: crates/deadline-cli/tests/cli/job.rs
info:
  program: deadline
  args:
    - job
    - list
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61361"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61361"
    AWS_ENDPOINT_URL_STS: "http://localhost:61361"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpg88M1w/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpg88M1w
---
success: false
exit_code: 1
----- stdout -----
Failed to get Jobs from Deadline:
AccessDeniedException: No message
Available queues in farm farm-abc:
  queue-111  Good Queue

----- stderr -----
